--- a/app/src/main/res/layout/fragment_blocking.xml
+++ b/app/src/main/res/layout/fragment_blocking.xml
@@ -1,7 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#565757">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/diary"
+            android:textColor="@color/colorPurpleBG"
+            android:layout_alignParentBottom="true"
+            android:padding="15dp"
+            />
+        <ImageView
+            android:src="@drawable/ic_search_purple"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/img_btn_search"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/lnear_filter"
+            android:background="@color/colorWhite"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:src="@drawable/ic_arrow_back"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_margin="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/img_btn_back"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_search"
+                >
+                <EditText
+                    android:background="@drawable/background_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:hint="@string/input"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="15dp"
+                    android:id="@+id/edt_search"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+        </RelativeLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_block"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+        app:tabSelectedTextColor="@color/colorPurpleBG"
+        app:tabTextColor="#CDCDCD"
+        app:tabIndicatorColor="@color/colorPurpleBG"
+        />
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/view"/>
+</LinearLayout>
