--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#4B0082</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorPurple">#6C3483</color>
     <color name="colorPurpleBG">#4B0082</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorGray">#DFDEDE</color>
+    <color name="colorRed">#DA2006</color>
 </resources>
