--- a/app/src/main/res/layout/activity_detail_diary.xml
+++ b/app/src/main/res/layout/activity_detail_diary.xml
@@ -6,182 +6,260 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".DetailDiaryActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <ImageView
+            android:id="@+id/img_btn_back_detail"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_arrow_back"
-            android:id="@+id/img_btn_back_detail"/>
+            android:src="@drawable/ic_arrow_back" />
+
         <TextView
-            android:padding="10dp"
-            android:textColor="@color/colorPurpleBG"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/detail"
             android:layout_gravity="center_vertical"
-            android:textSize="20sp"/>
+            android:padding="10dp"
+            android:text="@string/detail"
+            android:textColor="@color/colorPurpleBG"
+            android:textSize="20sp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_person_detail"
             android:layout_width="125dp"
             android:layout_height="125dp"
-            app:civ_border_width="2dp"
             android:layout_gravity="center_horizontal"
+            android:src="@drawable/default_icon_person"
             app:civ_border_color="@color/colorPurpleBG"
-            android:src="@drawable/default_icon_person"/>
+            app:civ_border_width="2dp" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="15dp"
             android:layout_alignBottom="@+id/img_person_detail"
-            >
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:layout_marginLeft="15dp"
+            android:orientation="horizontal">
+
             <TextView
+                android:id="@+id/tv_name_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/default_name"
-                android:textSize="15sp"
                 android:layout_gravity="center_vertical"
-                android:textStyle="bold"
+                android:text="@string/default_name"
                 android:textColor="@color/colorBlack"
-                android:id="@+id/tv_name_detail"/>
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
             <ImageView
+                android:id="@+id/imgEditDetail"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/ic_edit"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_edit" />
         </LinearLayout>
+
         <TextView
+            android:id="@+id/tvNumberDetail2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/default_number"/>
+            android:text="@string/default_number" />
     </LinearLayout>
+
     <LinearLayout
-        android:paddingTop="10dp"
-        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="95dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/bg_update_data_success"
-        android:weightSum="3"
-        >
+        android:paddingTop="10dp"
+        android:gravity="center"
+        android:weightSum="4">
+
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:layout_weight="1"
+            android:orientation="vertical">
+
             <ImageView
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/ic_call_overlay"
+                android:id="@+id/img_call_white"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
-                android:id="@+id/img_call_white"/>
+                android:src="@drawable/ic_call_overlay" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
+                android:layout_marginTop="10dp"
                 android:text="@string/call"
                 android:textColor="@color/colorWhite"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_call"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:layout_weight="1"
+            android:orientation="vertical">
+
             <ImageView
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/ic_message_overlay"
+                android:id="@+id/img_message_white"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
-                android:id="@+id/img_message_white"/>
+                android:src="@drawable/ic_message_overlay" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
+                android:layout_marginTop="10dp"
                 android:text="@string/message"
                 android:textColor="@color/colorWhite"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_message"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/layoutSaveContact"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical"
-            >
+            android:visibility="gone">
+
             <ImageView
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:src="@drawable/ic_block_white"
+                android:id="@+id/img_save_contact"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
-                android:id="@+id/img_block_white"/>
+                android:src="@drawable/ic_save_overlay" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:text="@string/save_contact"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_block_white"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_block_white" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
                 android:text="@string/block"
                 android:textColor="@color/colorWhite"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_block"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
+        android:id="@+id/tvDateDetail"
+        android:textStyle="bold"
+        android:textColor="@color/colorPurple"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingBottom="16dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tvNumberDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imgType"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_in_call"/>
+            <TextView
+                android:id="@+id/tvDuration"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/background_card_number"
-        >
+        android:background="@drawable/background_card_number">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/tv_phone_number_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/default_number"
                 android:layout_margin="10dp"
-                android:textSize="15dp"
-                android:textColor="@color/colorBlack"
-                android:id="@+id/tv_phone_number_detail"/>
+                android:text="@string/default_number"
+                android:textColor="@color/colorPurple"
+                android:textSize="15dp" />
+
             <TextView
+                android:id="@+id/tv_nation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/default_country"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
-                android:textSize="12sp"
-                android:id="@+id/tv_nation"/>
+                android:textSize="12sp" />
+
             <TextView
+                android:id="@+id/tv_network"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/default_network"
-                android:textSize="12sp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="10dp"
-                android:id="@+id/tv_network"
-                />
+                android:text="@string/default_network"
+                android:textSize="12sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
