--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,6 +11,7 @@
         android:text="@string/settings"
         android:textAllCaps="true"
         android:textColor="@color/colorPurple"
+        android:padding="16dp"
         android:textSize="24dp"
         android:textStyle="bold" />
 
@@ -23,6 +23,7 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:paddingLeft="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -46,7 +47,13 @@
                 android:layout_weight="0.5"
                 android:src="@drawable/ic_arrow_right" />
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorDarkGray" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/btnTermsSec"
@@ -56,6 +63,7 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:paddingLeft="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -82,6 +90,11 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorDarkGray" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/btnTermsUse"
         android:layout_width="match_parent"
@@ -90,6 +103,7 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:paddingLeft="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -115,6 +129,11 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorDarkGray" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/btnQuestion"
         android:layout_width="match_parent"
@@ -123,6 +142,7 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:paddingLeft="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -148,6 +168,11 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorDarkGray" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
@@ -156,6 +181,7 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:paddingLeft="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
