--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#DFDEDE</color>
     <color name="colorRed">#DA2006</color>
+    <color name="colorLavender">#f2d9f6</color>
+    <color name="colorDarkGray">#919090</color>
+    <color name="colorDarkLateBlue">#42437a</color>
 </resources>
