--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -39,6 +39,7 @@
                 <TextView
                     android:textStyle="bold"
                     android:id="@+id/tvNameContact"
+                    android:textColor="@color/colorBlack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
