--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="colorDarkGray">#919090</color>
     <color name="colorDarkLateBlue">#42437a</color>
     <color name="colorHideSlide">#61000000</color>
+    <color name="colorFireBrick">#a90939</color>
 </resources>
