--- a/app/src/main/res/layout/activity_detail_contact.xml
+++ b/app/src/main/res/layout/activity_detail_contact.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailDiaryActivity">
+    tools:context=".DetailContact">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/img_btn_back_detail"
+            android:id="@+id/imgBack"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center_vertical"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:padding="10dp"
-            android:text="@string/detail_call"
+            android:text="@string/detail"
             android:textColor="@color/colorPurpleBG"
             android:textSize="20sp" />
     </LinearLayout>
@@ -54,7 +54,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_name_detail"
+                android:id="@+id/tvNameDetailContact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -64,7 +64,7 @@
                 android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/imgEditDetail"
+                android:id="@+id/imgEditDetailContact"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="10dp"
@@ -72,7 +72,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvNumberDetail2"
+            android:id="@+id/tvNumberDetailContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/default_number" />
@@ -94,7 +94,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img_call_white"
+                android:id="@+id/imgDetailContactCall"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
@@ -118,7 +118,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img_message_white"
+                android:id="@+id/imgDetailContactMessage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
@@ -136,39 +136,13 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/layoutSaveContact"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/img_save_contact"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_save_overlay" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:text="@string/save_contact"
-                android:textColor="@color/colorWhite"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img_block_white"
+                android:id="@+id/imgDetailContactBlock"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
@@ -186,43 +160,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="8dp"
-        android:id="@+id/tvDateDetail"
-        android:textStyle="bold"
-        android:textColor="@color/colorPurple"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingBottom="16dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tvNumberDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <LinearLayout
-            android:layout_marginLeft="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/imgType"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_in_call"/>
-            <TextView
-                android:id="@+id/tvDuration"
-                android:layout_marginLeft="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -235,7 +172,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_phone_number_detail"
+                android:id="@+id/tvDetailContactPhoneNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -244,7 +181,7 @@
                 android:textSize="15dp" />
 
             <TextView
-                android:id="@+id/tv_nation"
+                android:id="@+id/tvDetailContactNation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -253,7 +190,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/tv_network"
+                android:id="@+id/tvDetailContactNetWork"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
