[Fix blockList screen + detail screen] done !

--- a/app/src/main/res/layout/activity_detail_contact.xml
+++ b/app/src/main/res/layout/activity_detail_contact.xml
@@ -30,7 +30,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
@@ -43,42 +43,76 @@
             android:src="@drawable/default_icon_person"
             app:civ_border_color="@color/colorPurpleBG"
             app:civ_border_width="2dp" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/img_person_detail"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:layout_marginLeft="15dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvNameDetailContact"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvNameDetailContact"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/default_name"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/default_name"
-                android:textColor="@color/colorBlack"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                >
+                <ImageView
+                    android:id="@+id/imgEditDetailContact"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_edit" />
+            </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imgEditDetailContact"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/ic_edit" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvNumberDetailContact"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/default_number" />
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            >
+            <TextView
+                android:id="@+id/tvNumberDetailContact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_number" />
+            <RelativeLayout
+                android:visibility="gone"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:id="@+id/rlt_block_type"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/background_list_type"
+                >
+                <TextView
+                    android:id="@+id/tv_block_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp"
+                    android:text="@string/default_network"
+                    android:textStyle="bold"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="10dp"
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lnear_detail"
         android:layout_width="match_parent"
         android:layout_height="95dp"
         android:layout_marginTop="15dp"
@@ -134,7 +168,31 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/lnear_save"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone">
 
+            <ImageView
+                android:id="@+id/imgDetailContactSave"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_save_overlay" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="@string/save_contact"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -158,7 +216,6 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
     </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
