--- a/app/src/main/res/layout/item_blocked_people.xml
+++ b/app/src/main/res/layout/item_blocked_people.xml
@@ -11,14 +11,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:id="@+id/img_blocked_person"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_red_other"
-                civ_border_width="2dp"
                 app:civ_border_color="@color/colorRed"
-                android:id="@+id/img_blocked_person"/>
+                app:civ_border_width="1dp" />
             <LinearLayout
                 android:weightSum="2"
                 android:layout_width="match_parent"
@@ -34,7 +36,7 @@
                     android:text="@string/default_name"
                     android:gravity="bottom"
                     android:paddingLeft="10sp"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:id="@+id/tv_blocked_name"
                     />
                 <TextView
@@ -42,7 +44,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="@string/blocked_default_work"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:id="@+id/tv_blocked_work"
